test_suite/tests/ui/default-attribute/unit.stderr
error: #[serde(default)] can only be used on structs that have fields
 --> tests/ui/default-attribute/unit.rs:3:10
  |
3 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
