test_suite/tests/ui/default-attribute/unit.rs
use serde_derive::Deserialize;

#[derive(Deserialize)]
#[serde(default)]
struct Unit;

fn main() {}
